chore(api - memory): add relationship filtering logic and optimizer for memory retrieval